[gd_scene load_steps=6 format=3 uid="uid://c7fi6rc4npmek"]

[ext_resource type="Script" uid="uid://c6icfe8b0s04n" path="res://Scenes/GameOver/game_over.gd" id="1_ybu6n"]
[ext_resource type="Texture2D" uid="uid://b8wefqx1r5u52" path="res://Art/background.png" id="2_jfln8"]
[ext_resource type="FontFile" uid="uid://dwy5mrxva7i5o" path="res://Art/ViaodaLibre-Regular.ttf" id="3_jfln8"]
[ext_resource type="AudioStream" uid="uid://wv3d3ywbtd73" path="res://Audio/death2.wav" id="4_h2hei"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2hei"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ybu6n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("2_jfln8")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0.412152, 0.412152, 0.412152, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_jfln8")
theme_override_font_sizes/normal_font_size = 201
theme_override_styles/normal = SubResource("StyleBoxEmpty_h2hei")
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LossReason" type="Label" parent="TextureRect/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 82)
layout_mode = 2
theme_override_font_sizes/font_size = 31
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RetryContainer" type="CenterContainer" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RetryBtn" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer/RetryContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/VBoxContainer/HBoxContainer/RetryContainer/RetryBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -20.0
offset_right = 49.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_jfln8")
theme_override_font_sizes/normal_font_size = 31
text = "Retry"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="giveUpContainer" type="CenterContainer" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GiveUpBtn" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer/giveUpContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Give Up"

[node name="sfx_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_h2hei")
bus = &"Sfx"

[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/RetryContainer/RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/giveUpContainer/GiveUpBtn" to="." method="_on_give_up_btn_pressed"]
